--- a/static/css/addGame.css
+++ b/static/css/addGame.css
@@ -272,3 +272,23 @@ input::placeholder {
     color: red;
     cursor: pointer;
 }
+
+
+@media (max-width: 	420px) {
+    .gamepopup {
+        width: 80%;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%,-50%);
+        background-color: #242526;
+        border-radius: 8%;
+        text-align: center;
+        z-index: 1001;
+    }
+
+    .gamepopup h2 {
+        font-size: large;
+    }
+}
