--- a/templates/base.html
+++ b/templates/base.html
@@ -10,17 +10,19 @@
 <body>
     <nav>
         <h2>Valhalla's Tabletop Games</h2>
-        <a href="/home" class="">Return Home</a>
-        <a href="/addGame" class="">Add Record</a>
-        <div class="dropdown">
-            <button class="dropbtn" style="width: 85px !important;">View Tools</button>
-            <div class="dropdown-content">
-                <a href="/showGames">View Records</a>
-                <a href="/DominionSelect">Dominion Selector</a>
+        <div style="display: flex; flex-direction: row;" >
+            <a href="/home" class="">Return Home</a>
+            <a href="/addGame" class="">Add Record</a>
+            <div class="dropdown MobileHide">
+                <button class="dropbtn" style="width: 85px !important;">View Tools</button>
+                <div class="dropdown-content">
+                    <a href="/showGames">View Records</a>
+                    <a href="/DominionSelect">Dominion Selector</a>
+                </div>
             </div>
+            <a href="/profile?name=current" class="">Your Profile</a>
+            <a href="/logout" class="">Log Out</a>
         </div>
-        <a href="/profile?name=current" class="">Your Profile</a>
-        <a href="/logout" class="">Log Out</a>
     </nav>
     {% block content %}
     {% endblock %}
